# 126901---IT3230---DHH20205087

./: .gitignore  README.md
w1/: Ex1_letterApear.c  Ex2_CompareArr.c  W1_HomeWork.c  data
w10/: .gitignore  CMakeLists.txt  main.c  number.txt  sort.c
w10/include/: sort.h
w13/: .gitignore  ex1.c  ex2.c  ex3.c
w2/: isInCricle.c  myStrcat.c  output  w2_homework.c
w3/: phoneAddress.c  studentManager.c
w4/: .gitignore  CMakeLists.txt  header.h  main.cpp  source.cpp
w4/include/: postfix.h  stack.h
w4/src/: main.c  postfix.c  stack.c
w5/Ex/: CMakeLists.txt  README.md
w5/Ex/include/: queue.h
w5/Ex/src/: main.c  queue.c
w5/toDoList/: CMakeLists.txt  README.md
w5/toDoList/include/: queue.h  toDo.h
w5/toDoList/src/: main.c  queue.c  test.c  toDo.c
w5/todolist/: CMakeLists.txt  README.md
w5/todolist/include/: queue.h
w5/todolist/src/: main.c  queue.c  todo.c
w6/: searchingArrByLinearSearch.c
w6/lookCharString/: main  main.c  text.out
w6/studentmanager/: CMakeLists.txt  README.md  binarySearch.c  main.c  student.c
w6/studentmanager/include/: student.h
w7/: .gitignore  main.cpp
w8/: .gitignore  tree.c
w8/BST/: .gitignore  CMakeLists.txt  README.md
w8/BST/include/: BST.h
w8/BST/src/: bst.c  main.c
w8/asd/: .gitignore  CMakeLists.txt  README.md
w8/asd/include/: postfix.h  stack.h  stackNodeTree.h  tree.h
w8/asd/src/: main.c  postfix.c  stack.c  stackNodeTree.c  tree.c
